# Petspatial_pets_adoption_website

./: pyproject.toml
backend/: .env
backend/adminuser/: urls.py  views.py
backend/adopter/: admin.py  models.py  serializers.py  urls.py  views.py
backend/adopter/migrations/: 0001_initial.py
backend/authapi/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/authapi/migrations/: 0001_initial.py  0002_remove_customuser_is_admin_alter_customuser_role.py  0003_remove_customuser_is_approved.py
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/pets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/pets/migrations/: 0001_initial.py  0002_alter_pet_image.py  0003_alter_pet_publisher.py  0004_alter_pet_id.py
backend/publisher/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/publisher/migrations/: 0001_initial.py
backend/user/: admin.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_remove_adopter_is_verified_and_more.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  main.js  main.jsx
frontend/src/components/: Footer.jsx  Navbar.jsx  index.js
frontend/src/containers/: About.jsx  Banner.jsx  Features.jsx  Pets.jsx  Plans.jsx  Post.jsx  Review.jsx  (+5 more)
src/: App.css  App.jsx
src/components/: index.js
src/containers/: index.js
src/pages/: Aboutpage.jsx  Contactpage.jsx
(+95 files in other folders)
